--- a/docs/Правила работы над проектом.md
+++ b/docs/Правила работы над проектом.md
@@ -4,14 +4,14 @@
 
 Мы придерживаемся методологии GitFlow для управления версиями нашего проекта.
 
-### Организация веток разработки:
+### Организация веток разработки
 
-#### Основные ветки:
+#### Основные ветки
 
 - `main` - ветка для готовых версий продукта
 - `develop` - ветка для разработки
 
-#### Префиксы веток:
+#### Префиксы веток
 
 - `feature-` - новая функциональность
 - `hotfix-` - исправления
@@ -19,23 +19,23 @@
 
 ### Порядок работы
 
-1. **Создание ветки для новой фичи:**
+1. **Создание ветки для новой функциональности**
 
    - Для каждой новой функциональности создается отдельная ветка с префиксом `feature-` от ветки `develop`.
 
-2. **Pull Request и Code Review:**
+2. **Pull Request и Code Review**
 
    - После завершения работы над функциональностью создается Pull Request для слияния этой ветки обратно в ветку `develop`.
    - Code Review проводит beValed.
 
-3. **Подготовка к релизу:**
+3. **Подготовка к выпуску новой версии**
 
    - При наборе достаточного количества функциональности для выпуска, подготавливается новая ветка релиза от `develop`.
 
-4. **Интеграция релиза:**
+4. **Интеграция новой версии**
 
    - После завершения всех необходимых правок и тестирования в ветке `release`, она интегрируется обратно как в `develop`, так и в `main`.
 
-5. **Исправление ошибок:**
+5. **Исправление ошибок**
    - Если в процессе разработки обнаруживаются ошибки, исправления производятся в ветке `develop` путем создания отдельной ветки `feature-`.
-   - Если ошибка обнаруживаются в ветке `main`, создается ветка `hotfix-` от `main`. После исправления ошибки ветка изменения фиксируются и в `main`, и в `develop`.
+   - Если ошибка обнаруживаются в ветке `main`, создается ветка `hotfix-` от `main`. После исправления ошибки изменения фиксируются и в `main`, и в `develop`.
