Update Сценарии атрибутов качества.md

--- a/docs/Сценарии атрибутов качества.md
+++ b/docs/Сценарии атрибутов качества.md
@@ -1,51 +1,47 @@
-# Сценарии атрибутов качества
+## 1 атрибут Доступноость
 
-## Функциональность
+### Сценарий
 
-### Эффективность
+-Источник: Поользователь с ограниченными возможностями
 
-#### Сценарий оптимизации времени обработки данных
+-Стимул: Попытка доступа к сервису
 
-- Проверка эффективности использования ресурсов сервера для обработки данных, чтобы минимизировать время ответа на запросы пользователей.
+-Артефакт: система- веб-приложение с данными о сети
 
-#### Сценарий оценки пропускной способности системы
+-Условия: Необходимость использование инструментов доступности
 
-- Тестирование пропускной способности обработчика данных для обеспечения быстрой и плавной работы в периоды пиковой нагрузки.
+-Реакция: Предоставление веб-приложением необходимой информации подстраивающаяся под ограниченные возможности
 
-### Удобство использования
+-Количественная мера реакции: Удобство использование веб-приложения людьми с ограниченными возможностями
 
-#### Сценарий оценки понятности интерфейса для пользователей
+## 2 атрибут Безопасность
 
-- Оценка того, насколько легко пользователи могут понять состояние своего провайдера на веб-странице и принять решение о необходимости обращения в техническую поддержку.
+### Сценарий
 
-#### Сценарий проверки доступности информации для пользователей
+-Источник: Поользователь с частной сетью
 
-- Проверка того, что данные о состоянии провайдера доступны пользователям в удобном и надежном формате, что позволяет им быстро и легко получить нужную информацию.
+-Стимул: Попытка доступа к данным о частной сети
 
-## Надежность
+-Артефакт: система- веб-приложение с данными о сети
 
-### Устойчивость
+-Условия: Необходимость использование инструментов безопасности
 
-#### Сценарий проверки работоспособности в условиях высокой нагрузки
+-Реакция: Запрашивание персональных данных для аутентификации в веб-приложении
 
-- Тестирование обработчика данных на его способность продолжать работу стабильно и эффективно даже при высокой нагрузке и большом объеме обрабатываемых данных.
+-Количественная мера реакции: Ограниченный доступ к частным сетям
 
-#### Сценарий проверки восстановления после сбоев
+## 3 атрибут Эффективность
 
-- Проверка способности обработчика данных автоматически восстанавливаться после возникновения сбоев или ошибок в процессе обработки данных.
+### Сценарий
 
-## Безопасность
+-Источник: Поользователь с медленным ПК
 
-### Конфиденциальность
+-Стимул: Попытка доступа к данным о сети с медленным ПК
 
-#### Сценарий проверки безопасности данных
+-Артефакт: система- веб-приложение с данными о сети
 
-- Проверка механизмов защиты конфиденциальности данных пользователей при передаче и обработке на сервере, чтобы предотвратить несанкционированный доступ к ним.
+-Условия: Необходимость использование инструментов оптимизации
 
-## Поддерживаемость и сопровождаемость
+-Реакция: Адаптирование к системным параметрам ПК пользователя
 
-### Модульность
-
-#### Сценарий проверки возможности масштабирования и модификации системы
-
-- Тестирование гибкости и легкости внесения изменений в обработчик данных для обеспечения его адаптации под изменяющиеся потребности и условия работы.
+-Количественная мера реакции: Оптимизированный процесс работы с сайтом
