update readme.md + edit dosc

--- a/docs/Сценарии атрибутов качества.md
+++ b/docs/Сценарии атрибутов качества.md
@@ -1,46 +1,48 @@
-## 1 атрибут Доступноость
+# Сценарии атрибутов качества
+
+## Атрибут Доступноость
 
 ### Сценарий
 
--Источник: Поользователь с ограниченными возможностями
+-Источник: Пользователь с ограниченными возможностями
 
 -Стимул: Попытка доступа к сервису
 
--Артефакт: система- веб-приложение с данными о сети
+-Артефакт: Система - веб-приложение с данными о сети
 
--Условия: Необходимость использование инструментов доступности
+-Условия: Необходимость использования инструментов доступности
 
--Реакция: Предоставление веб-приложением необходимой информации подстраивающаяся под ограниченные возможности
+-Реакция: Предоставление веб-приложением необходимой информации, подстраивающейся под ограниченные возможности
 
--Количественная мера реакции: Удобство использование веб-приложения людьми с ограниченными возможностями
+-Количественная мера реакции: Удобство использования веб-приложения людьми с ограниченными возможностями
 
-## 2 атрибут Безопасность
+## Атрибут Безопасность
 
 ### Сценарий
 
--Источник: Поользователь с частной сетью
+-Источник: Пользователь с частной сетью
 
 -Стимул: Попытка доступа к данным о частной сети
 
--Артефакт: система- веб-приложение с данными о сети
+-Артефакт: Система - веб-приложение с данными о сети
 
--Условия: Необходимость использование инструментов безопасности
+-Условия: Необходимость использования инструментов безопасности
 
 -Реакция: Запрашивание персональных данных для аутентификации в веб-приложении
 
 -Количественная мера реакции: Ограниченный доступ к частным сетям
 
-## 3 атрибут Эффективность
+## Атрибут Эффективность
 
 ### Сценарий
 
--Источник: Поользователь с медленным ПК
+-Источник: Пользователь с медленным ПК
 
 -Стимул: Попытка доступа к данным о сети с медленным ПК
 
--Артефакт: система- веб-приложение с данными о сети
+-Артефакт: Система - веб-приложение с данными о сети
 
--Условия: Необходимость использование инструментов оптимизации
+-Условия: Необходимость использования инструментов оптимизации
 
 -Реакция: Адаптирование к системным параметрам ПК пользователя
 
